--- a/dapp_5/index.html
+++ b/dapp_5/index.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
   <div class="col item-text-wrap">
-    <p id="event">Post EDCON lunch</p>
+    <p id="event">Title</p>
   </div>
   <div class="col item-text-wrap">
     <p id="date">19/02/2017 12:30</p>
