Add invitation code

--- a/dapp_5/index.html
+++ b/dapp_5/index.html
@@ -37,6 +37,9 @@
 <div class="list" id="handleTwitter">
   <div class="item item-input-inset">
     <label class="item-input-wrapper">
+      <input type="text" placeholder="invitation code" id="handleInvitationCode">
+    </label>
+    <label class="item-input-wrapper">
       <input type="text" placeholder="@twitter_handle" id="handleName">
     </label>
     <button class="button button-small button-balanced" id="registerButton">
