--- a/dapp_5/index.html
+++ b/dapp_5/index.html
@@ -39,6 +39,8 @@
     <label class="item-input-wrapper">
       <input type="text" placeholder="invitation code" id="handleInvitationCode">
     </label>
+  </div>
+  <div class="item item-input-inset">
     <label class="item-input-wrapper">
       <input type="text" placeholder="@twitter_handle" id="handleName">
     </label>
