ENS features added

--- a/ENS/dapp_14/index.html
+++ b/ENS/dapp_14/index.html
@@ -1,13 +1,21 @@
 <div class="card">
-  <span class="text-center">ENS</span>
   <div class="item-divider item-thumbnail item-body text-center">
-
+    <span class="text-center">ENS support</span>
   </div>
   <div class="item item-body">
+    <p>
+      
+      <ul>Test ENS features: 
+        <li>Register name.test (3 transactions required)</li>
+        <li>Check Owner of the name.test</li>
+        <li>Resolve Address from name.test</li>
+      </ul>
+    </p>
      <div class="list">
       <label class="item item-input">
-        <input id="domain" placeholder="yourdomain"/>.eth
+        <input id="domain" placeholder="name"/>.test
       </label>
+      <label id="address"><label>
     </div>
   </div>
 </div>
