--- a/ENS/dapp_14/index.html
+++ b/ENS/dapp_14/index.html
@@ -1,21 +1,20 @@
 <div class="card">
   <div class="item-divider item-thumbnail item-body text-center">
-    <span class="text-center">ENS support</span>
+    <span class="text-center">Test ENS features</span>
   </div>
   <div class="item item-body">
     <p>
-      
-      <ul>Test ENS features: 
-        <li>Register name.test (3 transactions required)</li>
-        <li>Check Owner of the name.test</li>
-        <li>Resolve Address from name.test</li>
+      <ul> 
+        <li>- Register name (3 transactions required)</li>
+        <li>- Check Owner of the name</li>
+        <li>- Resolve Address from name</li>
       </ul>
     </p>
      <div class="list">
       <label class="item item-input">
-        <input id="domain" placeholder="name"/>.test
+        <input id="domain" placeholder="name"/>.<label id="suffix"></label>
       </label>
-      <label id="address"><label>
+      <!--label id="address"><label-->
     </div>
   </div>
 </div>
